--- a/apply.html
+++ b/apply.html
@@ -73,7 +73,7 @@
   <div class="form-container">
     <h2>Internship Application Form</h2>
     <form>
-        <label for="internship domain">Year</label>
+        <label for="internship domain">Internship Domain</label>
       <select required>
         <option value="">-- Select Domain --</option>
         <option >Web Development</option>
